--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.19.0",
     "quasar": "^2.0.0-beta.1"
   },
   "devDependencies": {
