Okay, have been derailed for about a day with getting Firebase and Quasar to work together. This all started because the tutorial doesn't cover FB Auth. Turns out adding FB Auth is tricky because with Quasar you don't have access to main.js file to wait for FB to connect BEFORE creating the main Vue app and mounting it to the DOM. I still haven't sorted it out but check my notes. For now, I'm making my boot/firebase.js file basically like my standard firebase/config.js. I want to see how far this simpler approach goes because in the tutorial Danny just export default db for the firestore service and that's it. I'll see how far this takes me and then address the wait for FB issue.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "gaylonalfano <gaylon.alfano@gmail.com>",
   "private": true,
   "scripts": {
+    "dev": "QENV=development quasar dev",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -13,10 +14,12 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.19.0",
+    "firebase": "^8.3.1",
     "quasar": "^2.0.0-beta.11"
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0-beta.10",
+    "@quasar/quasar-app-extension-qenv": "^1.1.0",
     "@types/node": "^10.17.15",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
